Note that this file only includes changes since Ice 3.2.1. For the
change history of prior releases, refer to the CHANGES file in the
subdirectory of each language mapping (e.g., cpp/CHANGES).


======================================================================
Changes since version 3.5.1
======================================================================


General Changes
===============

- Added a cancel() method to AsyncResult. Calling it prevents a queued
  asynchronous request from being sent, or ignores the reply if the
  request has already been sent. It does not cancel the request in the
  server.

- Removed the "old" asynchronous invocation API that was deprecated
  in Ice 3.4.

- Added the WebSocket transports to the Ice core.

- Added "Logger" facet to Admin, which allows remote applications
  to attach RemoteLogger objects and receive log messages. Both
  the icegridadmin command-line utility and IceGrid Admin use this
  new facet to retrieve the logs of Ice servers, IceBox services,
  IceGrid nodes and IceGrid registries.

- The Admin object can now be hosted in an application-supplied
  object adapter using the new property Ice.Admin.Enabled and the
  new operation Ice::Communicator::createAdmin.

- Added methods to proxies to asynchronously get the connection
  associated with the proxy. The current synchronous methods can block
  as they may cause the connection to be established.

- Added support for HTTP proxies to the Ice core in C++, C# and
  Java. This allows outgoing TCP & SSL connections to be mediated by
  an HTTP network proxy service that supports HTTP CONNECT tunneling.
  The new properties Ice.HTTPProxyHost and Ice.HTTPProxyPort provide
  addressing information for the proxy.

- Added IceStorm::InvalidSubscriber exception which is thrown by
  the subscribe/unsubscribe operations when an invalid subscriber
  (such as a null proxy) is passed.

- Added Ice.Default.SourceAddress property and --sourceAddress